@@ -33,6 +33,7 @@ changes since wmaker 0.61.1:
     1. if old is NULL, return wmalloc(new_size).
     2. if new_size is 0, call wfree(old), and return NULL.
     3. if both old is a valid pointer and new_size>0, call realloc.
+- added wstrerror(int errnum) to return the string associated with errnum.
 
 changes since wmaker 0.61.0:
 ............................
